@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-35
+2015-03-20 Mikhail S. Dubrovin	
+- GeometryObject - delete and make new array poimters only if array size is changing (PSAS-11)
+	
 Tag: V00-02-34
 2015-03-10 Mikhail S. Dubrovin	
 - GeometryAccess - add ref_img_from_pixel_arrays method which returns image as a reference to memeber data (PSAS-11)
